# questplus

./: .appveyor.yml  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  BUILDING.md  CHANGES.md  MANIFEST.in  README.md  appveyor.yml  psychometric_function.py  pyproject.toml  qp.py  run_qp.py  setup.cfg  setup.py
.github/workflows/: main.yml  release.yml
doc/: requirements-rtd.txt
doc/source/: api.rst  conf.py  index.rst  installation.md  psychometric_function.rst  qp.rst  usage_example.md  utils.rst
docs/source/: psychometric_function.rst  qp.rst  utils.rst
questplus/: __init__.py  _constants.py  _version.py  psychometric_function.py  qp.py  run_qp.py  utils.py
questplus/tests/: test_qp.py
