[metadata]
name = questplus
author = Richard Höchenberger <richard.hoechenberger@gmail.com>
author_email = richard.hoechenberger@gmail.com
url = https://github.com/hoechenberger/questplus
project_urls =
    Source Code = https://github.com/hoechenberger/questplus
    Bug Tracker = https://github.com/hoechenberger/questplus/issues
license = GPL v3
license_file = LICENSE
description = A QUEST+ implementation in Python.
long_description = file: README.md
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.6
install_requires =
    numpy
    scipy
    xarray

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = questplus/_version.py
versionfile_build = questplus/_version.py
tag_prefix = ''
